--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3"
   }
